Estructura inicial de la cabecera
with '#' will be ignored, and an empty message aborts the commit.

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/Estilos.css">
     </head>
     <body>
-        <div id-"container">
+        <div id="container">
+            <div id ="cabecera"
+        </div>
+        cabecera
+
             <div id-"post">
                 <hl>Este es el titulo atractivo e interesante del post<hl>
                     <p> Y este es el parrafo de inicio donde vamos a explicar  las cosas increibles que se pueden hacer con ramas<p>
